Simply-Blogging/css/style.css
h1,h2,h3{
    text-align: center;
}

div.addBlog{
    margin-left: auto;
    margin-right: auto;
    margin-top: 100px;
    width : 600px;
    height : 500px;
    border: 5px solid black;
    text-align: center;
    border-radius: 30px;
    padding: 40px;
}

div.smallBlog{
    margin-left: 25px;
    margin-right: 25px;
    margin-top: 100px;
    width : 350px;
    height : 300px;
    border: 5px solid black;
    text-align: center;
    border-radius: 30px;
    padding: 10px;
    word-wrap: break-word;
    overflow-x: auto;
    overflow-y: auto;

}

.smallBlogDesc{
}

.smallBlogImg{
    width: 235px;
    height: 100px;
    display:inline-block
}

.formLabelTitle{
    font-size: 20px;
    font-weight: bold;
}
.formInput{
    border: 5px solid black;
    width: 370px;
}

textarea{
    border: 5px solid black;
}

.row{
    border: 5px solid white;
}

.col{
    border: 5px solid white;
}

table{
    border-collapse: separate;
    border: 5px solid black;
    border-radius: 30px;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
}

tr{
    /* border : 5px solid purple; */

}

td {
    /* border: 5px solid green; */
    width : 100px;
    height : 100px;
}
.tableTitle{
    text-align: center;
    font-size: 25px;
}

